# percival-internetarchive-mcp

./: .gitignore  MIGRATION.md  README.md  ROLLOUT.md  SECURITY.md  auth.py  ia_bootstrap.py  pyproject.toml  server.py  tools.py
src/percival_internetarchive_mcp/: __init__.py  __main__.py  archive_tools.py  auth.py  contracts.py  ia_bootstrap.py  observability.py  rollout.py  security_policy.py  security_posture.py  server.py
tests/: test_archive_tools_contract.py  test_auth_runtime.py  test_rollout_and_compat.py  test_security_policy_contract.py  test_security_posture_contract.py  test_server_runtime_guards.py  test_server_tool_surface.py
